ApiProdutos-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-produtos
  namespace: entrega
  labels:
    app: api-produtos
    # cria grupo na topologia
    app.kubernetes.io/part-of: produtos
  annotations:
    # cria conexão na topologia
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"banco-dados"}]'
spec:
  selector:
    matchLabels:
      app: api-produtos
  template:
    metadata:
      labels:
        app: api-produtos
    spec:
      containers:
        - image: quay.io/wesleyegberto/fiap-api-produtos:1
          imagePullPolicy: Always
          name: api-produtos
          resources:
            limits:
              cpu: 0.5
          ports:
          - containerPort: 8080
            name: http
          readinessProbe:
            httpGet:
              path: /health/check
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/check
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
