BancoDados-Pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: banco-dados
  namespace: entrega
  labels:
    app: banco-dados
    # cria grupo na topologia
    app.kubernetes.io/part-of: produtos
spec:
  containers:
    - image: mysql
      name: banco-dados
      resources:
        limits:
          cpu: 1
