ApiProdutos-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-produtos
  namespace: entrega
  labels:
    app: api-produtos
spec:
  selector:
    app: api-produtos
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
