BancoDados-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: banco-dados
  namespace: entrega
  labels:
    app: banco-dados
spec:
  selector:
    app: banco-dados
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
